Updated UI with new background photo.

--- a/UI/index.html
+++ b/UI/index.html
@@ -23,7 +23,9 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a href="#help-center"><button class="btn btn-warning">Need Help</button></a>
-
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Why Covid-xray?<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
@@ -59,6 +61,24 @@
         </div>
 
     </section>
+    <section class="why-layout">
+        <div class="container inside-why-layout">
+            <div class='row why-content-center'>
+                <div class="col-md-6 align-self-center">
+                    <h2>Why Covid-xray?</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus natus ex ullam id,
+                        aliquid expedita unde dolor adipisci iure aut placeat accusamus vero temporibus eum et quis enim
+                        sint non!</p>
+
+                    <button class="btn btn-primary">FeedBack</button>
+                </div>
+                <div class="col-md-6 align-self-center">
+                    <img src="./pictures/doctorspraying.png" alt="covid-xray doctor spraying icon" style="width:100%">
+                </div>
+
+            </div>
+        </div>
+    </section>
     <section class="info-content" id="help-center">
         <div class="container info-text-margin">
             <h2 class="text-center">Help Center</h2>
@@ -68,8 +88,7 @@
                 <div class="row">
                     <div class="col-md-4 card-margin">
                         <div class="card card-style">
-                            <img class="card-img-top image-style" src="./pictures/stayhome.jpg" alt="Card image"
-                                style="width:100%">
+                            <img class="card-img-top image-style" src="./pictures/stayhome.jpg" alt="Card image">
                             <div class="card-body">
                                 <h4 class="card-title">How to protect yourself</h4>
                                 <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
@@ -93,8 +112,7 @@
                     </div>
                     <div class="col-md-4 card-margin">
                         <div class="card card-style">
-                            <img class="card-img-top image-style" src="./pictures/stayhome.jpg" alt="Card image"
-                                style="width:100%">
+                            <img class="card-img-top image-style" src="./pictures/stayhome.jpg" alt="Card image">
                             <div class="card-body">
                                 <h4 class="card-title">what is the symptom</h4>
                                 <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
